WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133789
[MSE][Mac] Crash in MediaSourcePrivateAVFObjC::naturalSize()
https://bugs.webkit.org/show_bug.cgi?id=133789
Summary
[MSE][Mac] Crash in MediaSourcePrivateAVFObjC::naturalSize()
Jer Noble
Reported
2014-06-12 00:39:06 PDT
[MSE][Mac] Crash in MediaSourcePrivateAVFObjC::naturalSize()
Attachments
Patch
(1.62 KB, patch)
2014-06-12 00:42 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-06-12 00:42:05 PDT
Created
attachment 232936
[details]
Patch
WebKit Commit Bot
Comment 2
2014-06-12 07:10:02 PDT
Comment on
attachment 232936
[details]
Patch Clearing flags on attachment: 232936 Committed
r169897
: <
http://trac.webkit.org/changeset/169897
>
WebKit Commit Bot
Comment 3
2014-06-12 07:10:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug