[MSE][Mac] Crash in MediaSourcePrivateAVFObjC::naturalSize() https://bugs.webkit.org/show_bug.cgi?id=133789

Reviewed by Eric Carlson.

Add null-check to proctect against being queried for the naturalSize before we have a
m_mediaSourcePrivate.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::naturalSize):


Canonical link: https://commits.webkit.org/151780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169897 268f45cc-cd09-0410-ab3c-d52691b4dbfc